# django-otp-u2f

./: .gitignore  .readthedocs  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.md  README.rst  manage.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
django_otp_u2f/: admin.py  models.py
django_otp_u2f/migrations/: 0001_initial.py
django_otp_u2f/tests/: settings.py  test_device.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
otp_u2f/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
otp_u2f/migrations/: 0001_initial.py  0002_u2fdevice_certificate.py  0002_webauthn.py  0003_auto_20191022_0937.py
otp_u2f/static/js/: base64url-arraybuffer.js  cbor.js
otp_u2f/templates/kleides_mfa/: device_u2f_create_form.html  device_u2f_verify_form.html
otp_u2f/tests/: settings.py  test_device.py  test_kleides_mfa.py
tests/: conftest.py  factories.py  settings.py  test_device.py  test_kleides_mfa.py  test_webauthn.py
