[metadata]
name = django-otp-u2f
description = django-otp device implementation for U2F
url = https://github.com/ossobv/django-otp-u2f/
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3
keywords = closso
author = Harm Geerts
author_email = hgeerts@osso.nl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Web Environment
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
python_requires = >=3.5
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django-otp>=0.7.0
    python-u2flib-server>=5.0.0
setup_requires =
    setuptools_scm[toml]>=6.0.1

[options.extras_require]
kleides-mfa = kleides-mfa>=0.1.7
test =
    python-u2flib-host
    coverage
    factory-boy
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    build
    dist
    docs
    tests

[bdist_wheel]
universal = 1

[aliases]
