[metadata]
name = django-otp-u2f
description = django-otp device implementation for U2F/Webauthn
url = https://github.com/ossobv/django-otp-u2f/
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3
keywords = django-otp universal 2nd factor u2f yubico webauthn
author = Harm Geerts
author_email = hgeerts@osso.nl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Web Environment
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django-otp>=1.1.1
    fido2>=1.0.0
    cryptography<3.0; python_version<='3.6'
setup_requires =
    setuptools_scm[toml]>=6.0.1

[options.extras_require]
docs =
    readthedocs-sphinx-search==0.1.0
    Sphinx==4.0.3
    sphinx-rtd-theme==0.5.2
kleides-mfa = kleides-mfa>=0.1.16
test =
    coverage
    factory-boy
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    build
    dist
    docs
    tests

[bdist_wheel]
universal = 1

[aliases]
