[metadata]
name = django-otp-u2f
description = django-otp device implementation for U2F/Webauthn
url = https://github.com/ossobv/django-otp-u2f/
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3
keywords = django-otp universal 2nd factor u2f yubico webauthn
author = Harm Geerts
author_email = hgeerts@osso.nl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Web Environment
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django-otp>=1.5.1
    fido2>=1.1.3,<2.0
setup_requires =
    setuptools_scm[toml]>=8.1.0

[options.extras_require]
docs =
    readthedocs-sphinx-search==0.1.0
    Sphinx==4.0.3
    sphinx-rtd-theme==0.5.2
kleides-mfa = kleides-mfa>=0.2.2
test =
    coverage
    factory-boy
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    build
    dist
    docs
    tests

[bdist_wheel]
universal = 1

[aliases]
